test/corpus/jslit.txt
=====
JS Literals
=====
module JSLit

pfunc foo : U := `
something
`
pfunc foo uses (U) : U := `blah`
---

(source_file
  (module
    (semi)
    (qname
      (identifier))
    (semi)
    (pfuncDecl
      (term
        (identifier))
      (jsLitString
        (jsStringFragment)))
    (semi)
    (pfuncDecl
      (identifier)
      (term
        (identifier))
      (jsLitString
        (jsStringFragment)))))
